Use fixed color, vncell_bg.png quality too low to my taste
git-svn-id: https://svn.code.sf.net/p/xigmanas/code/trunk@2346 beaaabd7-781f-4c1e-bc4d-5cfe25df7511

--- a/www/gui.css
+++ b/www/gui.css
@@ -69,7 +69,10 @@ pre {
 	font-weight: bold;
 }
 .vncellbg, .vncell, .vncellreq, .vncellt {
-	background: #D6D6D6 url("vncell_bg.png") repeat-x scroll left top;
+	background-color: #D6D6D6;
+/*
+	background: #DCDCDC url("vncell_bg.png") repeat-x scroll left top;
+*/
 	padding-right: 20px;
 	padding-left: 8px;
 }
